--- a/miniprogram/pages/found/found.wxml
+++ b/miniprogram/pages/found/found.wxml
@@ -14,7 +14,12 @@
 			</form>
             <view class="weui-search-bar__cancel-btn" bindtap="hideInput">取消</view>
     </view>
-    
+    <view class="my-tab">
+      <button class="my-tab-item" bindtap="changePosition" data-p="0">全部</button>
+      <button class="my-tab-item" bindtap="changePosition" data-p="1">八里台校区</button>
+      <button class="my-tab-item" bindtap="changePosition" data-p="2">津南校区</button>
+      <button class="my-tab-item" bindtap="changePosition" data-p="3">泰达校区</button>
+    </view>
 		<view class="searchbar-result" wx:if="{{inputVal.length > 0}}">
 			<view wx:for="{{dataList1_search}}" wx:key='index'>
           <view class="box">
@@ -25,11 +30,12 @@
               </view>
               <view class="top">
                 <image class="call" src="../../images/call.png" bindtap="call" data-call="{{item}}"></image>
-                <image class="call" src="../../images/qq.png" bindtap="wechat" data-wechat="{{item}}"></image>
+                <image class="call" src="../../images/qq.png" bindtap="qq" data-qq="{{item}}"></image>
                 <image class="call" src="../../images/wechat.png" bindtap="wechat" data-wechat="{{item}}"></image>
               </view>
             </view>
             <text class="tag">{{item.position}}</text>
+            <text class="kind">{{item.kind}}</text>
             <view class="line"></view>
             <view class="info">
               <text>物品：{{item.name}}</text>
@@ -61,11 +67,12 @@
               </view>
               <view class="top">
                 <image class="call" src="../../images/call.png" bindtap="call" data-call="{{item}}"></image>
-                <image class="call" src="../../images/qq.png" bindtap="wechat" data-wechat="{{item}}"></image>
+                <image class="call" src="../../images/qq.png" bindtap="qq" data-qq="{{item}}"></image>
                 <image class="call" src="../../images/wechat.png" bindtap="wechat" data-wechat="{{item}}"></image>
               </view>
             </view>
             <text class="tag">{{item.position}}</text>
+            <text class="kind">{{item.kind}}</text>
             <view class="line"></view>
             <view class="info">
               <text>物品：{{item.name}}</text>
@@ -88,55 +95,3 @@
     </view>
 	</view>
 </view>
-
-<!-- <view>
-  <swiper current="{{page}}" duration="300" bindchange="switchTab">
-  <swiper duration="300" bindchange="switchTab">
-    <swiper-item>
-      <scroll-view scroll-y="true" style="height:100%">
-        <view wx:for="{{dataList1}}" wx:key='index'>
-          <view class="box">
-            <view class="top">
-              <view class="top">
-                <image class="touxiang" src="{{item.touxiang}}"></image>
-                <view class="title">{{item.userName}}</view>
-              </view>
-              <view class="top">
-                <image class="call" src="../../images/call.png" bindtap="call" data-call="{{item}}"></image>
-                <image class="call" src="../../images/qq.png" bindtap="wechat" data-wechat="{{item}}"></image>
-                <image class="call" src="../../images/wechat.png" bindtap="wechat" data-wechat="{{item}}"></image>
-              </view>
-            </view>
-            <view class="line"></view>
-            <view class="info">
-              <text>物品：{{item.name}}</text>
-            </view>
-            <view class="info">
-              <text>说明：{{item.info}}</text>
-            </view>
-            <scroll-view scroll-x="true" class="img_box">
-              <block wx:key="index" wx:for="{{item.fileIDs}}" wx:for-item="itemImg">
-                <image class='img' src='{{itemImg}}' mode='aspectFill' data-img='{{[itemImg,item.fileIDs]}}' bindtap="previewImg"></image>
-              </block>
-            </scroll-view>
-            <view class="box_bottom" wx:if="{{openid==item._openid}}">
-              <view class="delete" bindtap="delete1" data-t="{{item}}">删除</view>
-              <view class="time">{{item.sendTime}}</view>
-            </view>
-            <view class="time" wx:else>{{item.sendTime}}</view>
-          </view>
-        </view>
-      </scroll-view>
-    </swiper-item>
-  </swiper>
-</view> -->
-<!-- <image class="send" src="../../images/send.png" bindtap="send"></image> -->
-<block wx:if="{{isSend}}">
-  <view class="show_send"  bindtap="back">
-    <view class="bg"></view>
-    <view class="show_button">
-      <button catchtap="send_lost">我丢东西了</button>
-      <button catchtap="send_found">我捡东西了</button>
-    </view>
-  </view>
-</block>
