--- a/miniprogram/pages/found/found.wxss
+++ b/miniprogram/pages/found/found.wxss
@@ -55,7 +55,7 @@ swiper {
 }
 
 .weui-search-bar {
-  background-color: rgb(245, 245, 245);
+  background-color: #f7f7f7;
   padding-bottom: 0;
 }
 
@@ -110,20 +110,20 @@ swiper {
 
 .tag {
   font-size: 27rpx;
-  color: white;
+  color: #f7f7f7;
   padding: 6rpx 10rpx;
   margin-left: 75rpx;
   border-radius: 10%;
-  background-color: #81d8cf;
+  background-color: #7e126e;
 }
 
 .kind {
   font-size: 27rpx;
-  color: white;
+  color: #f7f7f7;
   padding: 6rpx 10rpx;
   margin-left: 20rpx;
   border-radius: 10%;
-  background-color: #81d8cf;
+  background-color: #7e126e;
 }
 
 .line {
