--- a/miniprogram/pages/lost/lost.wxss
+++ b/miniprogram/pages/lost/lost.wxss
@@ -55,7 +55,7 @@ swiper {
 }
 
 .weui-search-bar {
-  background-color: rgb(245, 245, 245);
+  background-color: #f7f7f7;
   padding-bottom: 0;
 }
 
@@ -114,7 +114,7 @@ swiper {
   padding: 6rpx 10rpx;
   margin-left: 75rpx;
   border-radius: 10%;
-  background-color: #81d8cf;
+  background-color: #7e126e;
 }
 
 .kind {
@@ -123,7 +123,7 @@ swiper {
   padding: 6rpx 10rpx;
   margin-left: 20rpx;
   border-radius: 10%;
-  background-color: #81d8cf;
+  background-color: #7e126e;
 }
 
 .line {
