--- a/miniprogram/pages/mine/about/about.wxss
+++ b/miniprogram/pages/mine/about/about.wxss
@@ -17,13 +17,13 @@
 	letter-spacing: 5rpx;
 }
 .about_data view{
-	width: 95%;
+	width: 90%;
 	margin: 0px auto;
 	padding: 20rpx;
 }
 
 .about_title{
-	margin: 30rpx 10rpx;
+	margin: 30rpx;
 	font-weight: bold;
 }
 .lianxi_list{
@@ -34,6 +34,7 @@
 	padding-left: 20rpx;
 	color:#333333;
 	letter-spacing: 3rpx;
+	margin: 0 20rpx;
 }
 .border-b{
 	border-top: 1px solid #ccc;
