--- a/miniprogram/pages/create/lost_create/lost_create.wxss
+++ b/miniprogram/pages/create/lost_create/lost_create.wxss
@@ -34,9 +34,13 @@
   align-items: center;
 }
 
+.radio{
+  font-size: 35rpx;
+}
+
 radio .wx-radio-input{
-  width: 50rpx;
-  height: 50rpx;
+  width: 40rpx;
+  height: 40rpx;
   border-radius: 50%;
   border-color:#1f0e0e !important;
   position: relative;
