--- a/miniprogram/pages/create/create.wxss
+++ b/miniprogram/pages/create/create.wxss
@@ -5,7 +5,7 @@ page{
   margin: 0 auto;
   padding-top: 15px;
   width: 40%; 
-  background-color: ghostwhite; 
+  background-color: #f7f7f7; 
   height: 100%;
   display: flex;
   flex-direction: column;
