--- a/miniprogram/pages/create/find_create/find_create.wxss
+++ b/miniprogram/pages/create/find_create/find_create.wxss
@@ -19,11 +19,12 @@
 .box_top {
   font-size: 40rpx;
   text-align: center;
+  color: #333333;
 }
 
 .line {
   width: 90vw;
-  border: 1rpx #e6e3e3 solid;
+  border-top: 1rpx #e6e3e3 solid;
   position: relative;
   left: -3vw;
   margin-top: 8px;
@@ -36,6 +37,7 @@
 
 .radio{
   font-size: 35rpx;
+  color: #404040;
 }
 
 radio .wx-radio-input{
@@ -138,21 +140,21 @@ button {
   background: #fff;
   width: 100%;
   position: relative;
-  border: 2rpx solid #ddd;
  }
  .select{
   box-sizing: border-box;
   width: 100%;
   height: 70rpx;
-  border:1px solid #efefef;
+  border: 1px solid #efefef;
   border-radius: 8rpx;
   display: flex;
   align-items: center;
   padding: 0 20rpx;
  }
  .select_text{
-  font-size: 17px;
+  font-size: 33rpx;
   flex: 1;
+  color: #505050;
  }
  .select_img{
   width: 40rpx;
@@ -167,13 +169,13 @@ button {
   position: absolute;
   top: 70rpx;
   width: 100%;
-  border:1px solid #efefef;
   box-sizing: border-box;
   height: 0;
   overflow-y: auto;
   border-top: 0;
   background: #fff;
   transition: height 0.3s;
+  color:#333333;
  }
  .option{
   display: block;
